feat: Add basic support for post upload (#3)